# jack_connection_manager

./: README.md  __init__.py  pyproject.toml  qt.py
jack_connection_manager/: __init__.py  qt.py
test/: console_test.py  qt_test.py
