[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "jack_connection_manager"
authors = [{name = "Leon Dionne", email = "ldionne@dridesign.sh.cn"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)"]
dynamic = ["version", "description"]
dependencies = ["pyjacklib", "log_soso"]

[project.optional-dependencies]
qt = ["PyQt5", "soso_qt_extras"]

[project.urls]
Home = "https://github.com/Zen-Master-SoSo/jack_connection_manager"

[bumpver]
current_version = "1.0.4"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "Bump version {old_version} -> {new_version}"
commit = true
tag = false
push = false

[bumpver.file_patterns]
"jack_connection_manager/__init__.py" = [
    '^__version__ = "{version}"$',
]
